<resources>
    <string name="app_name">DeviceRoation</string>
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="age_label">Age</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="submit_btn_text">Submit</string>
    <string name="reset_btn_text">Reset</string>

    <string name="user_name_label">User Name</string>
    <string name="password_label">Password</string>
    <string name="login_btn_text">LogIn</string>
</resources>
